Resolve compiler warnings.